[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valorant-fandom"
version = "1.0.0"
description = "Valorant Fandom Wiki verilerini ceken Python kutuphanesi - ajanlar, silahlar, haritalar, ikonlar"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Berkay Cik"}]
keywords = ["valorant", "fandom", "wiki", "api", "agents", "weapons", "maps"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/hzKamburga/valorant-fandom"
Repository = "https://github.com/hzKamburga/valorant-fandom"

[tool.setuptools.packages.find]
where = ["."]
